<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.activities.SignUpActivity">

    <ScrollView
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

            <EditText
                style="@style/UserInfoEditText"
                android:id="@+id/etLogin"
                android:hint="@string/login"/>

            <EditText
                style="@style/UserInfoEditText"
                android:id="@+id/etName"
                android:hint="@string/name"/>

            <EditText
                style="@style/UserInfoEditText"
                android:id="@+id/etSurname"
                android:hint="@string/surname"/>

            <EditText
                style="@style/UserInfoEditText"
                android:id="@+id/etMail"
                android:inputType="textEmailAddress"
                android:hint="@string/mail"/>

            <EditText
                style="@style/UserInfoEditText"
                android:id="@+id/etPassword"
                android:hint="@string/password"/>

            <EditText
                style="@style/UserInfoEditText"
                android:id="@+id/etPhone"
                android:inputType="phone"
                android:hint="@string/phone"/>

            <TextView
                style="@style/UserInfoEditText"
                android:id="@+id/tvStatus"
                android:minHeight="@dimen/_40sdp"
                android:hint="@string/status"/>

            <Button
                android:id="@+id/btnStart"
                android:layout_marginTop="@dimen/_20sdp"
                android:text="@string/sign_up"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>
        </LinearLayout>
    </ScrollView>

    <ProgressBar
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:id="@+id/progressBar"
        android:visibility="gone"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>
</androidx.constraintlayout.widget.ConstraintLayout>